@@ -10,21 +10,23 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Slf4j
 public class FileHandler extends SimpleChannelInboundHandler<AbstractMassage> {
 
-    private final Path serverDir = Path.of("server_files");
-    private final Path clientDir = Path.of("files");
+    private final Path serverDir = Paths.get(".", "server_files");
+    private final Path clientDir = Paths.get(".", "files");
 
     @Override
     public void channelActive(ChannelHandlerContext ctx) throws Exception {
-        ctx.writeAndFlush(new ListMessage(serverDir));
+        ctx.writeAndFlush((new ListMessage(serverDir)));
     }
 
     @Override
     protected void channelRead0(ChannelHandlerContext ctx, AbstractMassage msg) throws Exception {
         log.info("received: {} message", msg.getMessageType().getName());
+
         if (msg instanceof FileMessage file) {
             Files.write(serverDir.resolve(file.getName()), file.getBytes());
             ctx.writeAndFlush(new ListMessage(serverDir));
